@@ -21,11 +21,11 @@ Description: Declare data validation rules and data quality indicators;
         analyzed for rule type and connectivity. See also Van der Loo
         and De Jonge (2018) <doi:10.1002/9781118897126>,
         chapter 6.
-Version: 0.9.3.39
+Version: 0.9.3.40
 Depends: R (>= 3.5.0), methods
 URL: https://github.com/data-cleaning/validate
 BugReports: https://github.com/data-cleaning/validate/issues
-Imports: stats, graphics, settings, yaml
+Imports: stats, graphics, grid, settings, yaml
 Suggests: tinytest (>= 0.9.6), knitr, rmarkdown
 Enhances: lumberjack
 VignetteBuilder: knitr
@@ -38,11 +38,11 @@ Collate:
     'indicator.R'
     'validator.R'
     'confrontation.R'
-    'barplot.R'
     'compare.R'
     'factory.R'
     'genericrules.R'
     'lumberjack.R'
+    'plot.R'
     'retailers.R'
     'run_validation.R'
     'syntax.R'
