@@ -109,6 +109,7 @@ exportMethods(plot)
 exportMethods(sort)
 exportMethods(summary)
 exportMethods(warnings)
+import(grid)
 import(methods)
 import(settings)
 import(yaml)
