@@ -1,4 +1,7 @@
 version 0.9.4
+- Improved visualisation of validation output using 'plot'. The 'barplot'
+  method for 'confrontation' objects is now deprecated and will be removed
+  in the next version.
 - New functions 'violating', 'satisfying', 'lacking' to select records 
   based on 'validator' objects or the outcome of validations ('validation' 
   objects).
